--- a/libft/makefile
+++ b/libft/makefile
@@ -1,12 +1,12 @@
 # **************************************************************************** #
 #                                                                              #
 #                                                         :::      ::::::::    #
-#    makefile                                           :+:      :+:    :+:    #
+#    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
 #    By: hopark <hopark@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/10/03 19:31:16 by hopark            #+#    #+#              #
-#    Updated: 2020/10/03 19:40:42 by hopark           ###   ########.fr        #
+#    Updated: 2020/10/03 20:55:38 by hopark           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
