--- a/01_ft_printf/Makefile
+++ b/01_ft_printf/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: hopark <hopark@student.42seoul.kr>         +#+  +:+       +#+         #
+#    By: hopark <hopark@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/11/23 13:16:57 by hopark            #+#    #+#              #
-#    Updated: 2020/11/23 13:17:12 by hopark           ###   ########.fr        #
+#    Updated: 2020/11/23 14:57:13 by hopark           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,82 +21,40 @@ CFLAG = -Wall -Wextra -Werror
 RM = rm
 RMFLAG = -f
 
-INCLUDES = ./libft.h
+LIBFT = libft.a
+LIBFT_DIR = libft/libft
+LIBFT_FILE = $(LIBFT_DIR)/$(LIBFT)
+LIBFT_INC_IDR = $(LIBFT_DIR)/include
 
-SRC_PART1 = \
-	./ft_memset.c	\
-	./ft_bzero.c	\
-	./ft_memcpy.c	\
-	./ft_memccpy.c	\
-	./ft_memmove.c	\
-	./ft_memchr.c	\
-	./ft_memcmp.c	\
-	./ft_calloc.c	\
-	./ft_strlen.c	\
-	./ft_strlcpy.c	\
-	./ft_strlcat.c	\
-	./ft_strchr.c	\
-	./ft_strrchr.c	\
-	./ft_strncmp.c	\
-	./ft_strnstr.c	\
-	./ft_strdup.c	\
-	./ft_isdigit.c	\
-	./ft_atoi.c		\
-	./ft_isalpha.c	\
-	./ft_isalnum.c	\
-	./ft_isascii.c	\
-	./ft_isprint.c	\
-	./ft_toupper.c	\
-	./ft_tolower.c
+INC_DIR = ./include
+SRC_DIR = ./src
+OBJ_DIR = ./obj
 
-SRC_PART2 = \
-	./ft_substr.c	\
-	./ft_strjoin.c	\
-	./ft_strtrim.c	\
-	./ft_split.c	\
-	./ft_itoa.c		\
-	./ft_strmapi.c	\
-	./ft_putchar_fd.c	\
-	./ft_putstr_fd.c	\
-	./ft_putendl_fd.c	\
-	./ft_putnbr_fd.c
+INCLUDES = $(addprefix $(INC_DIR)/, \
+		ft_putchar_fd.h \
+)
 
-SRCS = \
-	$(SRC_PART1)	\
-	$(SRC_PART2)
+SRCS = $(addprefix $(SRC_DIR)/, \
+	ft_putchar_fd.c \
+)
 
-OBJS = $(SRCS:.c=.o)
-
-SRC_BONUS = \
-	./ft_lstnew.c	\
-	./ft_lstadd_front.c	\
-	./ft_lstsize.c	\
-	./ft_lstlast.c	\
-	./ft_lstadd_back.c	\
-	./ft_lstdelone.c	\
-	./ft_lstclear.c	\
-	./ft_lstiter.c	\
-	./ft_lstmap.c
-
-OBJS_BONUS = $(SRC_BONUS:.c=.o)
+OBJS = $(addprefix $(OBJ_DIR)/, $(notdir $(SRCS:.c=.o)))
 
 all : $(NAME)
 
 clean :
-	$(RM) $(RMFLAG) $(OBJS) $(OBJS_BONUS)
+	$(RM) $(RMFLAG) $(OBJS)
 
 fclean : clean
 	$(RM) $(RMFLAG) $(NAME)
 
 re : fclean all
 
-.c.o : $(SRCS) $(INCLUDES)
-	$(CC) $(CFLAGS) -c $< -o $(<:.c=.o)
-
-$(NAME) : $(OBJS)
+$(OBJ_DIR)/%.o : $(SRC_DIR)/%.c
+	mkdir -p $(OBJ_DIR)
+	$(CC) $(CFLAGS) -I $(INC_DIR) -c $< -o $@
+	
+$(NAME) : $(INCLUDES) $(OBJS)
 	$(AR) $(ARFLAGS) $@ $^
-
-bonus : $(OBJS) $(OBJS_BONUS)
-	$(AR) $(ARFLAGS) $(NAME) $^
 
 .PHONY: all clean fclean re
