--- a/01_ft_printf/.vscode/settings.json
+++ b/01_ft_printf/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
 	"files.associations": {
 		"ft_printf.h": "c",
-		"ft_printf_parse.h": "c"
+		"ft_printf_parse.h": "c",
+		"ft_printf_type.h": "c",
+		"libft.h": "c",
+		"stdlib.h": "c"
 	}
 }
