--- a/01_ft_printf/.vscode/settings.json
+++ b/01_ft_printf/.vscode/settings.json
@@ -4,6 +4,7 @@
 		"ft_printf_parse.h": "c",
 		"ft_printf_type.h": "c",
 		"libft.h": "c",
-		"stdlib.h": "c"
+		"stdlib.h": "c",
+		"unistd.h": "c"
 	}
 }
