--- a/02_ft_server/dockerfile
+++ b/02_ft_server/dockerfile
@@ -2,7 +2,7 @@ FROM    debian:buster
 
 LABEL   maintainer="hopark@student.42seoul.kr"
 
-RUN     apt-get update && apt-get upgrade && apt-get install -y \
+RUN     apt-get -y update && apt-get -y upgrade && apt-get -y install\
         nginx \
         mariadb-server \
         php-mysql \
