--- a/03_libasm/libasm/makefile
+++ b/03_libasm/libasm/makefile
@@ -6,7 +6,7 @@
 #    By: hopark <hopark@student.42seoul.kr>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/03/30 13:24:29 by hopark            #+#    #+#              #
-#    Updated: 2021/03/31 15:54:34 by hopark           ###   ########.fr        #
+#    Updated: 2021/03/31 18:37:55 by hopark           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,6 +15,9 @@ NAME = libasm.a
 NA = nasm
 
 NFLAGS = -f macho64
+
+CC = gcc
+CFLAGS = -Wall -Werror -Wextra -L. -lasm
 
 SRC = ft_strlen.s		\
 	ft_strcpy.s			\
@@ -35,8 +38,12 @@ $(NAME):
 	$(NA) $(NFLAGS) ft_write.s
 	$(NA) $(NFLAGS) ft_read.s
 	$(NA) $(NFLAGS) ft_strdup.s
-	ar rc $(NAME) $(OBJ)
+	ar rcs $(NAME) $(OBJ)
 	ranlib $(NAME)
+	
+test : $(NAME)
+	$(CC) $(CFLAGS) main.c -o $(NAME)
+
 
 clean:
 	rm -f $(OBJ)
