--- a/03_push_swap/makefile
+++ b/03_push_swap/makefile
@@ -1,3 +1,14 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: hopark <hopark@student.42seoul.kr>         +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2021/04/28 18:03:34 by hopark            #+#    #+#              #
+#    Updated: 2021/04/28 18:03:35 by hopark           ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
 
 NAME1 = checker
 NAME2 = push_swap
