--- a/03_push_swap/makefile
+++ b/03_push_swap/makefile
@@ -6,7 +6,7 @@
 #    By: hopark <hopark@student.42seoul.kr>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/04/28 18:03:34 by hopark            #+#    #+#              #
-#    Updated: 2021/04/30 15:56:24 by hopark           ###   ########.fr        #
+#    Updated: 2021/05/05 18:13:14 by hopark           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -66,7 +66,7 @@ fclean : clean
 re : fclean all
 
 test : all
-	./checker 2 9 25 6 20 7 10 17 5 27 19 26 13 29 21 28 8 4 18 22 12 14 15 16 3 11 30 24 1 23
+	./checker 5 69 53 3 38 12 32 37 24 89 54 31 55 94 80 33 15 13 23 83 63 78 16 84 30 4 79 57 25 60 10 90 7 44 41 51 87 47 46 71 73 56 61 48 19 96 26 77 42 64 9 66 70 39 91 43 59 93 45 62 86 17 35 72 1 68 29 22 85 67 2 27 14 88 11 28 95 100 82 92 75 58 97 74 6 21 81 49 36 18 65 50 76 52 40 98 20 34 8 99
 
 $(OBJ_DIR1)/%.o : %.c | $(OBJ_DIR1)
 	$(CC) -I $(INC_DIR) -c $< -o $@
