--- a/3_circle/push_swap/makefile
+++ b/3_circle/push_swap/makefile
@@ -6,7 +6,7 @@
 #    By: hopark <hopark@student.42seoul.kr>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/04/28 18:03:34 by hopark            #+#    #+#              #
-#    Updated: 2021/05/09 18:01:47 by hopark           ###   ########.fr        #
+#    Updated: 2021/05/10 15:56:32 by hopark           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -110,7 +110,7 @@ re : fclean all
 test1 : $(NAME1)
 	./checker 2 1 3 4
 test2 : $(NAME2)
-	./push_swap -c 12 7 17 9 6 16 18 15 2 11 4 13 8 10 20 14 1 5 19 3
+	./push_swap -c 24 39 3 27 76 21 75 66 50 64 57 80 45 59 78 69 68 43 37 10 73 48 7 61 8 41 94 91 34 98 40 2 32 82 29 47 65 31 23 38 20 71 53 99 35 52 81 62 46 84 49 77 60 28 14 16 95 15 51 63 88 12 22 33 4 100 9 96 1 25 18 11 72 83 58 56 44 30 67 86 89 74 36 90 93 17 92 79 13 19 87 26 42 85 54 97 70 5 55 6
 test3 : $(NAME1) $(NAME2)
 	./push_swap 12 7 17 9 6 16 18 15 2 11 4 13 8 10 20 14 1 5 19 3  | ./checker 12 7 17 9 6 16 18 15 2 11 4 13 8 10 20 14 1 5 19 3 
 
