--- a/3_circle/push_swap/makefile
+++ b/3_circle/push_swap/makefile
@@ -6,7 +6,7 @@
 #    By: hopark <hopark@student.42seoul.kr>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/04/28 18:03:34 by hopark            #+#    #+#              #
-#    Updated: 2021/05/11 15:21:28 by hopark           ###   ########.fr        #
+#    Updated: 2021/05/11 15:25:26 by hopark           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -101,8 +101,6 @@ OBJ1 = $(addprefix $(OBJ_DIR1)/, $(notdir $(SRC1:.c=.o)))
 OBJ2 = $(addprefix $(OBJ_DIR2)/, $(notdir $(SRC2:.c=.o)))
 OBJS = $(OBJ1) $(OBJ2) 
 
-#all : $(NAME2)
-
 all : $(NAME1) $(NAME2)
 
 clean :
@@ -116,9 +114,9 @@ re : fclean all
 test1 : $(NAME1)
 	./checker "2 1 3 4"
 test2 : $(NAME2)
-	./push_swap -c 24 39 3 27
+	./push_swap -c -88 -86 76 -27 -91 28 23 10 -92 -31 74 -52 -93 95 -69 34 -56 93 22 35 -82 14 -16 -12 18 0 -53 4 -45 -66 19 -51 33 30 63 -47 91 -3 -22 -89 -2 29 80 -19 -4 -90 -67 90 -41 83 -99 -9 -24 20 -8 -77 -80 -18 -55 46 64 68 -10 -64 13 -14 -23 -1 -21 -100 60 99 79 15 55 6 -15 -33 39 -94 11 -62 40 43 -84 75 44 78 73 24 -44 -73 87 -7 -39 -75 57 54 2 81
 test3 : $(NAME1) $(NAME2)
-	./push_swap 12 7 17 9 6 16 18 15 2 11 4 13 8 10 20 14 1 5 19 3  | ./checker 12 7 17 9 6 16 18 15 2 11 4 13 8 10 20 14 1 5 19 3 
+	./push_swap -88 -86 76 -27 -91 28 23 10 -92 -31 74 -52 -93 95 -69 34 -56 93 22 35 -82 14 -16 -12 18 0 -53 4 -45 -66 19 -51 33 30 63 -47 91 -3 -22 -89 -2 29 80 -19 -4 -90 -67 90 -41 83 -99 -9 -24 20 -8 -77 -80 -18 -55 46 64 68 -10 -64 13 -14 -23 -1 -21 -100 60 99 79 15 55 6 -15 -33 39 -94 11 -62 40 43 -84 75 44 78 73 24 -44 -73 87 -7 -39 -75 57 54 2 81  | ./checker -88 -86 76 -27 -91 28 23 10 -92 -31 74 -52 -93 95 -69 34 -56 93 22 35 -82 14 -16 -12 18 0 -53 4 -45 -66 19 -51 33 30 63 -47 91 -3 -22 -89 -2 29 80 -19 -4 -90 -67 90 -41 83 -99 -9 -24 20 -8 -77 -80 -18 -55 46 64 68 -10 -64 13 -14 -23 -1 -21 -100 60 99 79 15 55 6 -15 -33 39 -94 11 -62 40 43 -84 75 44 78 73 24 -44 -73 87 -7 -39 -75 57 54 2 81
 
 $(OBJ_DIR1)/%.o : %.c | $(OBJ_DIR1)
 	$(CC) $(CFLAGS) -I $(INC_DIR) -c $< -o $@
