--- a/3_circle/push_swap/makefile
+++ b/3_circle/push_swap/makefile
@@ -6,7 +6,7 @@
 #    By: hopark <hopark@student.42seoul.kr>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/04/28 18:03:34 by hopark            #+#    #+#              #
-#    Updated: 2021/05/11 15:25:26 by hopark           ###   ########.fr        #
+#    Updated: 2021/05/11 17:53:28 by hopark           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,8 +14,8 @@ NAME1 = checker
 NAME2 = push_swap
 
 CC = gcc
- CFLAGS = -Wall -Wextra -Werror
-#CFLAGS = -Wall -Wextra -Werror -g3 -fsanitize=address
+# CFLAGS = -Wall -Wextra -Werror
+CFLAGS = -Wall -Wextra -Werror -g3 -fsanitize=address
 RM = rm
 RMFLAGS = -f
 
@@ -113,8 +113,8 @@ re : fclean all
 
 test1 : $(NAME1)
 	./checker "2 1 3 4"
-test2 : $(NAME2)
-	./push_swap -c -88 -86 76 -27 -91 28 23 10 -92 -31 74 -52 -93 95 -69 34 -56 93 22 35 -82 14 -16 -12 18 0 -53 4 -45 -66 19 -51 33 30 63 -47 91 -3 -22 -89 -2 29 80 -19 -4 -90 -67 90 -41 83 -99 -9 -24 20 -8 -77 -80 -18 -55 46 64 68 -10 -64 13 -14 -23 -1 -21 -100 60 99 79 15 55 6 -15 -33 39 -94 11 -62 40 43 -84 75 44 78 73 24 -44 -73 87 -7 -39 -75 57 54 2 81
+test2 : $(NAME1)
+	./push_swap -c "2 1 3 4"
 test3 : $(NAME1) $(NAME2)
 	./push_swap -88 -86 76 -27 -91 28 23 10 -92 -31 74 -52 -93 95 -69 34 -56 93 22 35 -82 14 -16 -12 18 0 -53 4 -45 -66 19 -51 33 30 63 -47 91 -3 -22 -89 -2 29 80 -19 -4 -90 -67 90 -41 83 -99 -9 -24 20 -8 -77 -80 -18 -55 46 64 68 -10 -64 13 -14 -23 -1 -21 -100 60 99 79 15 55 6 -15 -33 39 -94 11 -62 40 43 -84 75 44 78 73 24 -44 -73 87 -7 -39 -75 57 54 2 81  | ./checker -88 -86 76 -27 -91 28 23 10 -92 -31 74 -52 -93 95 -69 34 -56 93 22 35 -82 14 -16 -12 18 0 -53 4 -45 -66 19 -51 33 30 63 -47 91 -3 -22 -89 -2 29 80 -19 -4 -90 -67 90 -41 83 -99 -9 -24 20 -8 -77 -80 -18 -55 46 64 68 -10 -64 13 -14 -23 -1 -21 -100 60 99 79 15 55 6 -15 -33 39 -94 11 -62 40 43 -84 75 44 78 73 24 -44 -73 87 -7 -39 -75 57 54 2 81
 
