--- a/3_circle/intra-uuid-54821cc7-d0b9-47be-ba8b-2378a8dda2fc-3563972/makefile
+++ b/3_circle/intra-uuid-54821cc7-d0b9-47be-ba8b-2378a8dda2fc-3563972/makefile
@@ -6,7 +6,7 @@
 #    By: hopark <hopark@student.42seoul.kr>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/04/28 18:03:34 by hopark            #+#    #+#              #
-#    Updated: 2021/05/13 14:15:46 by hopark           ###   ########.fr        #
+#    Updated: 2021/05/13 20:05:48 by hopark           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -116,7 +116,7 @@ re : fclean all bonus
 test1 : $(NAME2)
 	./push_swap -v "2 1 " "3 4 one"
 test2 : $(NAME2)
-	./push_swap -c "27 33 94 21 34 62 73 41 17 72 61 20 91 5 74 87 22 70 66 39 59 40 10 26 1 57 30 90 31 58 53 63 65 52 50 92 83 14 79 29 55 36 51 6 18 43 75 45 35 12 38 80 88 54 32 69 89 25 56 78 86 9 37 82 28 71 7 68 81 19 99 47 15 97 48 11 49 46 8 24 2 96 95 98 67 23 64 60 100 44 4 85 42 3 77 13 84 76 93 16"
+	./checker 1 3 2
 test3 : $(NAME1) $(NAME2)
 	./push_swap -88 -86 76 -27 -91 28 23 10 -92 -31 74 -52 -93 95 -69 34 -56 93 22 35 -82 14 -16 -12 18 0 -53 4 -45 -66 19 -51 33 30 63 -47 91 -3 -22 -89 -2 29 80 -19 -4 -90 -67 90 -41 83 -99 -9 -24 20 -8 -77 -80 -18 -55 46 64 68 -10 -64 13 -14 -23 -1 -21 -100 60 99 79 15 55 6 -15 -33 39 -94 11 -62 40 43 -84 75 44 78 73 24 -44 -73 87 -7 -39 -75 57 54 2 81  | ./checker -88 -86 76 -27 -91 28 23 10 -92 -31 74 -52 -93 95 -69 34 -56 93 22 35 -82 14 -16 -12 18 0 -53 4 -45 -66 19 -51 33 30 63 -47 91 -3 -22 -89 -2 29 80 -19 -4 -90 -67 90 -41 83 -99 -9 -24 20 -8 -77 -80 -18 -55 46 64 68 -10 -64 13 -14 -23 -1 -21 -100 60 99 79 15 55 6 -15 -33 39 -94 11 -62 40 43 -84 75 44 78 73 24 -44 -73 87 -7 -39 -75 57 54 2 81
 
