--- a/2_circle/pipex/makefile
+++ b/2_circle/pipex/makefile
@@ -6,7 +6,7 @@
 #    By: hjpark <hjpark@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/06/22 14:12:16 by hjpark            #+#    #+#              #
-#    Updated: 2021/07/13 19:40:40 by hjpark           ###   ########.fr        #
+#    Updated: 2021/07/14 19:22:08 by hjpark           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,7 @@ NAME = pipex
 CC = gcc
 # CFLAGS = -Wall -Wextra -Werror
 # CFLAGS = -Wall -Wextra -Werror -g3 -fsanitize=address
-# CFLAGS = -g3 -fsanitize=address
+CFLAGS = -fsanitize=address
 RM = rm
 RMFLAGS = -f
 
@@ -58,14 +58,14 @@ clean :
 	$(RM) $(RMFLAGS) $(OBJ)
 
 fclean : clean
-	$(RM) $(RMFLAGS) $(NAME)
+	$(RM) $(RMFLAGS) $(NAME) test1 test2
 
 re : fclean all
 
-test2 : $(NAME)
-	 ./pipex here_doc infile "ls -l" "grep a" "wc -l" outfile
 test : $(NAME)
-	 ./pipex infile "./checker 2 1 3" "cat -e" "grep a" "wc -l" outfile
+	 ./pipex infile "./checker 2 1 3" "cat -e" "cat -e" "cat -e" test1
+test2 : $(NAME)
+	 ./pipex here_doc pp "cat -e" "grep a" test2
 
 $(OBJ_DIR)/%.o : %.c | $(OBJ_DIR)
 	@mkdir -p $(OBJ_DIR)
