--- a/3_circle/Philosophers/philo_bonus/makefile
+++ b/3_circle/Philosophers/philo_bonus/makefile
@@ -6,22 +6,22 @@
 #    By: hjpark <hjpark@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/06/22 14:12:16 by hjpark            #+#    #+#              #
-#    Updated: 2021/07/30 18:01:31 by hjpark           ###   ########.fr        #
+#    Updated: 2021/07/31 16:21:29 by hjpark           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = philo_bonus
 CC = gcc
-# CFLAGS = -Wall -Wextra -Werror
+CFLAGS = -Wall -Wextra -Werror
 # CFLAGS = -Wall -Wextra -Werror -g3 -fsanitize=address
 # CFLAGS = -fsanitize=address
 RM = rm
 RMFLAGS = -f
 
-INC_DIR = ../include
+INC_DIR = include
 
 ENGINE_DIR = engine
-UTIL_DIR = ../util
+UTIL_DIR = util
 OBJ_DIR = obj
 
 INCLUDE = $(addprefix $(INC_DIR)/, \
@@ -36,14 +36,26 @@ vpath %.c \
 SRC = \
 	$(ENGINE) \
 	$(UTIL) \
-	$(wildcard *.c)
 
-ENGINE = $(wildcard $(ENGINE_DIR)/*.c)
+ENGINE = $(addprefix $(ENGINE_DIR)/, \
+		ft_check_death.c \
+		ft_fork.c \
+		ft_free_philo_bonus.c \
+		ft_game.c \
+		ft_init.c \
+		ft_printf.c \
+		philo_bonus.c \
+)
 
-UTIL = $(wildcard $(UTIL_DIR)/*.c)
-
-# UTIL = $(addprefix $(UTIL_DIR)/, \
-# )
+UTIL = $(addprefix $(UTIL_DIR)/, \
+		ft_atoi.c \
+		ft_free.c \
+		ft_get_time.c \
+		ft_malloc.c \
+		ft_string.c \
+		ft_usleep.c \
+		ft_write.c \
+)
 
 OBJ = $(addprefix $(OBJ_DIR)/, $(notdir $(SRC:.c=.o)))
 
@@ -53,11 +65,9 @@ clean :
 	$(RM) $(RMFLAGS) $(OBJ)
 
 fclean : clean
-	$(RM) $(RMFLAGS) $(NAME) test1 test2
+	$(RM) $(RMFLAGS) $(NAME)
 
 re : fclean all
-
-bonus : re
 
 test : $(NAME)
 	 ./philo_bonus 4 410 200 200 200
