--- a/3_circle/Philosophers/philo/makefile
+++ b/3_circle/Philosophers/philo/makefile
@@ -1,12 +1,12 @@
 # **************************************************************************** #
 #                                                                              #
 #                                                         :::      ::::::::    #
-#    makefile                                           :+:      :+:    :+:    #
+#    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
 #    By: hjpark <hjpark@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/06/22 14:12:16 by hjpark            #+#    #+#              #
-#    Updated: 2021/08/04 16:48:10 by hjpark           ###   ########.fr        #
+#    Updated: 2021/08/13 13:27:51 by hjpark           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -31,7 +31,7 @@ INCLUDE = $(addprefix $(INC_DIR)/, \
 
 vpath %.c \
 	$(ENGINE_DIR) \
-	$(UTIL_DIR) \
+$(UTIL_DIR) \
 
 SRC = \
 	$(ENGINE) \
