--- a/4_circle/cpp_module/cpp_module_00/ex02/Makefile
+++ b/4_circle/cpp_module/cpp_module_00/ex02/Makefile
@@ -6,22 +6,22 @@ RMFLAGS = -f
 
 OBJ_DIR = obj
 
+INC_DIR = include
+SRC_DIR = src
+OBJ_DIR = obj
+
 vpath %.cpp $(SRC_DIR)
 
-INC = Account.hpp
+INC = $(addprefix $(INC_DIR)/, \
+		Account.hpp \
+)
 
-SRC = Account.cpp, \
-		test.cpp
+SRC = $(addprefix $(SRC_DIR)/, \
+		Account.cpp \
+		tests.cpp \
+)
 
 OBJ = $(addprefix $(OBJ_DIR)/, $(notdir $(SRC:.cpp=.o)))
-$(OBJ_DIR) :
-	@mkdir -p $(OBJ_DIR)
-
-$(OBJ_DIR)/%.o : %.cpp $(INC) | $(OBJ_DIR)
-	@$(CC) $(CFLAGS) -I $(INC) -c $< -o $@
-
-$(NAME) :$(OBJ)
-	@$(CC) $(CFLAGS) -o $(NAME) $(OBJ)
 
 all : $(NAME)
 
@@ -36,5 +36,17 @@ test :$(NAME)
 	./Account
 
 re : fclean all
+
+
+OBJ = $(addprefix $(OBJ_DIR)/, $(notdir $(SRC:.cpp=.o)))
+$(OBJ_DIR) :
+	@mkdir -p $(OBJ_DIR)
+$(OBJ_DIR)/%.o : %.cpp $(INC) | $(OBJ_DIR)
+	@$(CC) $(CFLAGS) -I $(INC_DIR) -c $< -o $@
+
+$(NAME) : $(OBJ) $(INC)
+	@$(CC) $(CFLAGS) -I $(INC_DIR) -o $(NAME) $(OBJ)
+
+
 
 .PHONY: all clean fclean re test\
