--- a/4_circle/cpp_module/cpp_module_02/ex00/Makefile
+++ b/4_circle/cpp_module/cpp_module_02/ex00/Makefile
@@ -1,37 +1,29 @@
-NAME = phonebook
+NAME = Fixed
 CC = clang++
 CFLAGS = -std=c++03 -Wall -Wextra -Werror
 RM = rm
 RMFLAGS = -f
 
-INC_DIR = include
-SRC_DIR = src
+OBJ_DIR = obj
+
+INC_DIR = .
+SRC_DIR = .
 OBJ_DIR = obj
 
 vpath %.cpp $(SRC_DIR)
 
 INC = $(addprefix $(INC_DIR)/, \
-		phonebook.hpp \
+		Fixed.hpp \
 )
 
 SRC = $(addprefix $(SRC_DIR)/, \
-		phonebook.cpp \
+		Fixed.cpp \
+		main.cpp \
 )
 
 OBJ = $(addprefix $(OBJ_DIR)/, $(notdir $(SRC:.cpp=.o)))
 
 all : $(NAME)
-
-$(OBJ_DIR) :
-	@mkdir -p $(OBJ_DIR)
-
-$(OBJ_DIR)/%.o : %.cpp $(INC) | $(OBJ_DIR)
-	@$(CC) $(CFLAGS) -I $(INC_DIR) -c $< -o $@
-
-
-$(NAME) : $(OBJ) $(INC)
-	@$(CC) $(CFLAGS) -o $(NAME) $(OBJ)
-
 
 clean :
 	$(RM) $(RMFLAGS) $(OBJ)
@@ -41,8 +33,20 @@ fclean :
 	rm -rf $(OBJ_DIR)
 
 test :$(NAME)
-	./phonebook
+	./Fixed
 
 re : fclean all
+
+
+OBJ = $(addprefix $(OBJ_DIR)/, $(notdir $(SRC:.cpp=.o)))
+$(OBJ_DIR) :
+	@mkdir -p $(OBJ_DIR)
+$(OBJ_DIR)/%.o : %.cpp $(INC) | $(OBJ_DIR)
+	@$(CC) $(CFLAGS) -I $(INC_DIR) -c $< -o $@
+
+$(NAME) : $(OBJ) $(INC)
+	@$(CC) $(CFLAGS) -I $(INC_DIR) -o $(NAME) $(OBJ)
+
+
 
 .PHONY: all clean fclean re test\
