--- a/4_circle/cpp_module/cpp_module_02/ex02/Makefile
+++ b/4_circle/cpp_module/cpp_module_02/ex02/Makefile
@@ -1,4 +1,4 @@
-NAME = karenFilter
+NAME = Fixed
 CC = clang++
 CFLAGS = -std=c++03 -Wall -Wextra -Werror
 RM = rm
@@ -7,17 +7,17 @@ RMFLAGS = -f
 OBJ_DIR = obj
 
 INC_DIR = .
-SRC_DIR = src
+SRC_DIR = .
 OBJ_DIR = obj
 
 vpath %.cpp $(SRC_DIR)
 
 INC = $(addprefix $(INC_DIR)/, \
-		Karen.hpp \
+		Fixed.hpp \
 )
 
 SRC = $(addprefix $(SRC_DIR)/, \
-		Karen.cpp \
+		Fixed.cpp \
 		main.cpp \
 )
 
@@ -33,7 +33,7 @@ fclean :
 	rm -rf $(OBJ_DIR)
 
 test :$(NAME)
-	./karenFilter
+	./Fixed
 
 re : fclean all
 
